2005-06-14  Bram Voss <bvos@oce.nl>
Removed the following printers for Oce (Wrong Filenames according Till's naming convention) :
=======================================
printer/8445PS.xml
printer/8465PS.xml
printer/PPC3073PS.xml
printer/PPC3074PS.xml
printer/PPC3093PS.xml
printer/PPC3094PS.xml
printer/PPC3113PS.xml
printer/PPC3114PS.xml
printer/PPC5115PS.xml
printer/PPC5160PS.xml
printer/VarioPrint2045PS.xml
printer/VarioPrint2050PS.xml
printer/VarioPrint2055PS.xml
printer/VarioPrint2060PS.xml
printer/VarioPrint2065PS.xml
printer/VarioPrint2070PS.xml
printer/VarioPrint2090PS.xml
printer/VarioPrint2100PS.xml
printer/VarioPrint2105PS.xml
printer/VarioPrint2110PS.xml
printer/VarioPrint3145PS.xml
printer/VarioPrint3155PS.xml
printer/VarioPrint3165PS.xml
=======================================

Added the following printers for Oce : 
=======================================
printer/Oce-VarioPrint_2110PS.xml
printer/Oce-VarioPrint_2100PS.xml
printer/Oce-VarioPrint_2045PS.xml
printer/Oce-VarioPrint_2055PS.xml
printer/Oce-VarioPrint_2065PS.xml
printer/Oce-VarioPrint_2050PS.xml
printer/Oce-VarioPrint_2060PS.xml
printer/Oce-VarioPrint_2070PS.xml
printer/Oce-3145PS.xml
printer/Oce-3155PS.xml
printer/Oce-3165PS.xml
printer/Oce-VarioPrint_2090PS.xml
printer/Oce-VarioPrint_2105PS.xml
printer/Oce-8445PS.xml
printer/Oce-8465PS.xml
printer/Oce-PPC3113PS.xml
printer/Oce-PPC3073PS.xml
printer/Oce-PPC3074PS.xml
printer/Oce-PPC3093PS.xml
printer/Oce-PPC3094PS.xml
printer/Oce-PPC5160PS.xml
printer/Oce-PPC3114PS.xml
printer/Oce-PPC5115PS.xml
=======================================

2005-06-10  Tim Waugh  <twaugh@redhat.com>

	* printer/Ricoh-Aficio_2228C_PS.xml: Added SNMP
	  information (RH bug #160036).

	* printer/Epson-Stylus_Photo_915.xml: Added IEEE 1284 information (RH
	  bug #160030).

2005-06-07  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-Stylus_Photo_870.xml: Added IEEE 1284 information (RH
	  bug #159717).

2005-06-07  Tim Waugh  <twaugh@redhat.com>
