@@ -1662,73 +1662,73 @@
    <id>printer/Xerox-DocuPrint_N4512PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2110PS.xml</id>
+   <id>printer/Oce-VarioPrint_2110PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2100PS.xml</id>
+   <id>printer/Oce-VarioPrint_2100PS</id>
   </printer>
     <printer>
-   <id>printer/Oce-VarioPrint_2045PS.xml</id>
+   <id>printer/Oce-VarioPrint_2045PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2055PS.xml</id>
+   <id>printer/Oce-VarioPrint_2055PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2065PS.xml</id>
+   <id>printer/Oce-VarioPrint_2065PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2050PS.xml</id>
+   <id>printer/Oce-VarioPrint_2050PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2060PS.xml</id>
+   <id>printer/Oce-VarioPrint_2060PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2070PS.xml</id>
+   <id>printer/Oce-VarioPrint_2070PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-3145PS.xml</id>
+   <id>printer/Oce-3145PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-3155PS.xml</id>
+   <id>printer/Oce-3155PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-3165PS.xml</id>
+   <id>printer/Oce-3165PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2090PS.xml</id>
+   <id>printer/Oce-VarioPrint_2090PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-VarioPrint_2105PS.xml</id>
+   <id>printer/Oce-VarioPrint_2105PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-8445PS.xml</id>
+   <id>printer/Oce-8445PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-8465PS.xml</id>
+   <id>printer/Oce-8465PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3113PS.xml</id>
+   <id>printer/Oce-PPC3113PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3073PS.xml</id>
+   <id>printer/Oce-PPC3073PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3074PS.xml</id>
+   <id>printer/Oce-PPC3074PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3093PS.xml</id>
+   <id>printer/Oce-PPC3093PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3094PS.xml</id>
+   <id>printer/Oce-PPC3094PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC5160PS.xml</id>
+   <id>printer/Oce-PPC5160PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC3114PS.xml</id>
+   <id>printer/Oce-PPC3114PS</id>
   </printer>
   <printer>
-   <id>printer/Oce-PPC5115PS.xml</id>
+   <id>printer/Oce-PPC5115PS</id>
   </printer>  
  </printers>
 </driver>
