@@ -1,0 +1,33 @@
+<printer id="printer/Oce-9050">
+  <make>Oce</make>
+  <model>9050</model>
+  <mechanism>
+    <impact/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>300</x>
+        <y>300</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism><!--no "url"-->
+  <lang>
+    <pcl/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  <driver>oce9050</driver>
+  <unverified/><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    The information about this printer shown here is only based in the
+    source code of the &quot;oce9050&quot; GhostScript driver. I have
+    only entered it to obtain foomatic configuration files for this
+    printer. Any information about this printer is welcome.
+
+    </en>
+  </comments>
+</printer>
