@@ -1,3 +1,11 @@
+2005-06-14  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Oce-9050.xml: Re-added, was probably accidentally removed.
+
+	* driver/Postscript.xml: Removed the ".xml" suffixes from the 
+	  printer IDs of the new OCE printer entries, the printer IDs have
+	  to be given here, not the filenames.
+
 2005-06-14  Bram Voss <bvos@oce.nl>
 Removed the following printers for Oce (Wrong Filenames according Till's naming convention) :
 =======================================
